code/java/OFDB/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for Java

[![API Version](https://img.shields.io/badge/api-v2.1.0-blue)](https://developer.factset.com/api-catalog/ofdb-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/ofdb/0.32.1)](https://central.sonatype.com/artifact/com.factset.sdk/ofdb/0.32.1)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB API

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.1.0
- SDK version: 0.32.1
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>ofdb</artifactId>
  <version>0.32.1</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:ofdb:0.32.1"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.auth.*;
import com.factset.sdk.OFDB.models.*;
import com.factset.sdk.OFDB.api.AddApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class AddApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        AddApi apiInstance = new AddApi(defaultClient);
        String path = "path_example"; // String | Encode database path
        AddDates addDates = new AddDates(); // AddDates | Required data for creating date in the database. At least one iterative field is required otherwise it will throw 400.
        try {
            InlineResponse202 result = apiInstance.addDates(path, addDates);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling AddApi#addDates");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.api.AddApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

AddApi apiInstance = new AddApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.OFDB.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AddApi* | [**addDates**](docs/AddApi.md#addDates) | **POST** /database/{path}/dates | 
*AddApi* | [**addFields**](docs/AddApi.md#addFields) | **POST** /database/{path}/fields | 
*AddApi* | [**addSymbols**](docs/AddApi.md#addSymbols) | **POST** /database/{path}/symbols | 
*CreateApi* | [**createDatabase**](docs/CreateApi.md#createDatabase) | **POST** /database | 
*DeleteApi* | [**deleteBulkItems**](docs/DeleteApi.md#deleteBulkItems) | **POST** /database/{path}/delete | 
*DeleteApi* | [**deleteDate**](docs/DeleteApi.md#deleteDate) | **DELETE** /database/{path}/dates/{date} | 
*DeleteApi* | [**deleteDateFromSymbol**](docs/DeleteApi.md#deleteDateFromSymbol) | **DELETE** /database/{path}/dates/{date}/symbols/{symbol} | 
*DeleteApi* | [**deleteSymbol**](docs/DeleteApi.md#deleteSymbol) | **DELETE** /database/{path}/symbols/{symbol} | 
*GetApi* | [**getAudit**](docs/GetApi.md#getAudit) | **GET** /database/{path}/audit | 
*GetApi* | [**getData**](docs/GetApi.md#getData) | **GET** /database/{path} | 
*GetApi* | [**getDates**](docs/GetApi.md#getDates) | **GET** /database/{path}/dates | 
*GetApi* | [**getFields**](docs/GetApi.md#getFields) | **GET** /database/{path}/fields | 
*GetApi* | [**getStats**](docs/GetApi.md#getStats) | **GET** /database/{path}/stats | 
*GetApi* | [**getSymbols**](docs/GetApi.md#getSymbols) | **GET** /database/{path}/symbols | 
*LongRunningApi* | [**getResourceDeleteBulkItems**](docs/LongRunningApi.md#getResourceDeleteBulkItems) | **GET** /database/{path}/delete/jobs/post/{id} | 
*LongRunningApi* | [**getResourceDeleteDate**](docs/LongRunningApi.md#getResourceDeleteDate) | **GET** /database/{path}/dates/{date}/jobs/delete/{id} | 
*LongRunningApi* | [**getResourceDeleteDateFromSymbol**](docs/LongRunningApi.md#getResourceDeleteDateFromSymbol) | **GET** /database/{path}/dates/{date}/symbols/{symbol}/jobs/delete/{id} | 
*LongRunningApi* | [**getResourceDeleteSymbol**](docs/LongRunningApi.md#getResourceDeleteSymbol) | **GET** /database/{path}/symbols/{symbol}/jobs/delete/{id} | 
*LongRunningApi* | [**getResourceGetAudit**](docs/LongRunningApi.md#getResourceGetAudit) | **GET** /database/{path}/audit/jobs/get/{id} | 
*LongRunningApi* | [**getResourceGetData**](docs/LongRunningApi.md#getResourceGetData) | **GET** /database/{path}/jobs/get/{id} | 
*LongRunningApi* | [**getResourceGetDates**](docs/LongRunningApi.md#getResourceGetDates) | **GET** /database/{path}/dates/jobs/get/{id} | 
*LongRunningApi* | [**getResourceGetFields**](docs/LongRunningApi.md#getResourceGetFields) | **GET** /database/{path}/fields/jobs/get/{id} | 
*LongRunningApi* | [**getResourceGetStats**](docs/LongRunningApi.md#getResourceGetStats) | **GET** /database/{path}/stats/jobs/get/{id} | 
*LongRunningApi* | [**getResourceGetSymbols**](docs/LongRunningApi.md#getResourceGetSymbols) | **GET** /database/{path}/symbols/jobs/get/{id} | 
*LongRunningApi* | [**getResourcePostDatabase**](docs/LongRunningApi.md#getResourcePostDatabase) | **GET** /database/jobs/post/{id} | 
*LongRunningApi* | [**getResourcePostDates**](docs/LongRunningApi.md#getResourcePostDates) | **GET** /database/{path}/dates/jobs/post/{id} | 
*LongRunningApi* | [**getResourcePostFields**](docs/LongRunningApi.md#getResourcePostFields) | **GET** /database/{path}/fields/jobs/post/{id} | 
*LongRunningApi* | [**getResourcePostSymbols**](docs/LongRunningApi.md#getResourcePostSymbols) | **GET** /database/{path}/symbols/jobs/post/{id} | 
*LongRunningApi* | [**getResourcePutDate**](docs/LongRunningApi.md#getResourcePutDate) | **GET** /database/{path}/dates/{date}/jobs/put/{id} | 
*LongRunningApi* | [**getResourcePutDates**](docs/LongRunningApi.md#getResourcePutDates) | **GET** /database/{path}/dates/jobs/put/{id} | 
*LongRunningApi* | [**getResourcePutSymbol**](docs/LongRunningApi.md#getResourcePutSymbol) | **GET** /database/{path}/symbols/{symbol}/jobs/put/{id} | 
*LongRunningApi* | [**getResourcePutSymbols**](docs/LongRunningApi.md#getResourcePutSymbols) | **GET** /database/{path}/symbols/jobs/put/{id} | 
*LongRunningApi* | [**getStatus**](docs/LongRunningApi.md#getStatus) | **GET** /database/jobs/{id}/status | 
*UpdateApi* | [**updateDate**](docs/UpdateApi.md#updateDate) | **PUT** /database/{path}/dates/{date} | 
*UpdateApi* | [**updateDates**](docs/UpdateApi.md#updateDates) | **PUT** /database/{path}/dates | 
*UpdateApi* | [**updateSymbol**](docs/UpdateApi.md#updateSymbol) | **PUT** /database/{path}/symbols/{symbol} | 
*UpdateApi* | [**updateSymbols**](docs/UpdateApi.md#updateSymbols) | **PUT** /database/{path}/symbols | 


## Documentation for Models

 - [AddDates](docs/AddDates.md)
 - [AddFields](docs/AddFields.md)
 - [AddSymbols](docs/AddSymbols.md)
 - [BulkDelete](docs/BulkDelete.md)
 - [BulkDeleteArrayItem](docs/BulkDeleteArrayItem.md)
 - [BulkDeleteArrayItemNested](docs/BulkDeleteArrayItemNested.md)
 - [BulkDeleteItem](docs/BulkDeleteItem.md)
 - [ContentWithDate](docs/ContentWithDate.md)
 - [ContentWithSymbol](docs/ContentWithSymbol.md)
 - [CreateDatabase](docs/CreateDatabase.md)
 - [CreateDatabaseData](docs/CreateDatabaseData.md)
 - [DataValue](docs/DataValue.md)
 - [DatabaseSchema](docs/DatabaseSchema.md)
 - [DatabaseSchemaData](docs/DatabaseSchemaData.md)
 - [DateAndContent](docs/DateAndContent.md)
 - [DateAndFields](docs/DateAndFields.md)
 - [DatesWithId](docs/DatesWithId.md)
 - [ErrorObject](docs/ErrorObject.md)
 - [ErrorObjectWithSource](docs/ErrorObjectWithSource.md)
 - [ErrorObjectWithSourceSource](docs/ErrorObjectWithSourceSource.md)
 - [FieldProperties](docs/FieldProperties.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse2007](docs/InlineResponse2007.md)
 - [InlineResponse2008](docs/InlineResponse2008.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse201](docs/InlineResponse201.md)
 - [InlineResponse201Data](docs/InlineResponse201Data.md)
 - [InlineResponse202](docs/InlineResponse202.md)
 - [InlineResponse202Data](docs/InlineResponse202Data.md)
 - [InlineResponse400](docs/InlineResponse400.md)
 - [InlineResponse403](docs/InlineResponse403.md)
 - [SuccessPostResponse](docs/SuccessPostResponse.md)
 - [SuccessPostResponseData](docs/SuccessPostResponseData.md)
 - [SymbolAndContent](docs/SymbolAndContent.md)
 - [SymbolAndFields](docs/SymbolAndFields.md)
 - [SymbolsWithId](docs/SymbolsWithId.md)
 - [UpdateDate](docs/UpdateDate.md)
 - [UpdateDates](docs/UpdateDates.md)
 - [UpdateSymbol](docs/UpdateSymbol.md)
 - [UpdateSymbols](docs/UpdateSymbols.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
