code/java/OFDB/v3/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# OFDB client library for Java

[![API Version](https://img.shields.io/badge/api-v3.0.0-blue)](https://developer.factset.com/api-catalog/ofdb-api)
[![Maven Central](https://img.shields.io/maven-central/v/com.factset.sdk/ofdb/0.0.4)](https://central.sonatype.com/artifact/com.factset.sdk/ofdb/0.0.4)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

OFDB API

This Java package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 3.0.0
- SDK version: 0.0.4
- Build package: org.openapitools.codegen.languages.JavaClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* Java JDK >= 1.8

## Installation

### Maven

Add these dependencies to your project's POM:

```xml
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>utils</artifactId>
  <version>1.1.0</version>
</dependency>
<dependency>
  <groupId>com.factset.sdk</groupId>
  <artifactId>ofdb</artifactId>
  <version>0.0.4</version>
  <scope>compile</scope>
</dependency>
```

### Gradle

Add these dependencies to your project's build file:

```groovy
  repositories {
    mavenCentral()
  }

  dependencies {
    implementation "com.factset.sdk:utils:1.1.0"
    implementation "com.factset.sdk:ofdb:0.0.4"
  }
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup Java environment.
   1. Install and activate Java 1.8+
   2. Install [maven](https://maven.apache.org/install.html) or [gradle](https://gradle.org/install/)
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```java
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.auth.*;
import com.factset.sdk.OFDB.models.*;
import com.factset.sdk.OFDB.api.AuditApi;

import com.factset.sdk.utils.authentication.ConfidentialClient;


public class AuditApiExample {

    public static void main(String[] args) throws Exception {
        // Examples for each supported authentication method are below,
        // choose one that satisfies your use case.

        /* (Preferred) OAuth 2.0: FactSetOAuth2 */
        // See https://github.com/FactSet/enterprise-sdk#oauth-20
        // for information on how to create the app-config.json file
        //
        // The confidential client instance should be reused in production environments.
        // See https://github.com/FactSet/enterprise-sdk-utils-java#authentication
        // for more information on using the ConfidentialClient class
        ConfidentialClient confidentialClient = new ConfidentialClient("./path/to/config.json");
        ApiClient defaultClient = new ApiClient()
          .setFactSetOAuth2Client(confidentialClient);

        /* Basic authentication: FactSetApiKey */
        // See https://github.com/FactSet/enterprise-sdk#api-key
        // ApiClient defaultClient = new ApiClient()
        //   .setUsername("YOUR USERNAME")
        //   .setPassword("YOUR PASSWORD");

        AuditApi apiInstance = new AuditApi(defaultClient);
        DatabasePathRoot databasePathRoot = new DatabasePathRoot(); // DatabasePathRoot | The databasePath to be fetched
        try {
            InlineResponse201 result = apiInstance.getAudit(databasePathRoot);
            System.out.println(result);
        } catch (ApiException e) {
            System.err.println("Exception when calling AuditApi#getAudit");
            System.err.println("Status code: " + e.getCode());
            System.err.println("Reason: " + e.getResponseBody());
            System.err.println("Response headers: " + e.getResponseHeaders());
            e.printStackTrace();
        }
    }
}

```

### Using a Proxy

To add a HTTP proxy for the API client, use `ClientConfig`:
```java

import org.glassfish.jersey.apache.connector.ApacheConnectorProvider;
import org.glassfish.jersey.client.ClientConfig;
import org.glassfish.jersey.client.ClientProperties;
import com.factset.sdk.OFDB.*;
import com.factset.sdk.OFDB.api.AuditApi;

...

ApiClient defaultClient = Configuration.getDefaultApiClient();
ClientConfig clientConfig = defaultClient.getClientConfig();
clientConfig.connectorProvider(new ApacheConnectorProvider());
clientConfig.property(ClientProperties.PROXY_URI, "http://proxy_url_here");
clientConfig.property(ClientProperties.PROXY_USERNAME, "proxy_username");
clientConfig.property(ClientProperties.PROXY_PASSWORD, "proxy_password");
defaultClient.setClientConfig(clientConfig);

AuditApi apiInstance = new AuditApi(defaultClient);

```

### Debugging
The SDK uses the standard library class [`java.util.logging.Logger`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Logger.html).

Calling `setDebugging(true)` on an instance of the `ApiClient` will return an instance of the `ApiClient` that has set the logger's [`Level`](https://docs.oracle.com/javase/7/docs/api/java/util/logging/Level.html) to `ALL`.

**Note**: This prints out sensitive information (e.g. the full request and response). Use with care.

```java
import com.factset.sdk.OFDB.ApiClient;

public class Main {
    public static void main(String[] args) throws Exception {
        ApiClient defaultClient = new ApiClient();
        defaultClient.setDebugging(true);

        // Setup authentication and make request with apiInstance...
    }
}
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/analytics/ofdb/v3*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*AuditApi* | [**getAudit**](docs/AuditApi.md#getAudit) | **POST** /database/audit/get | 
*AuditApi* | [**getResourceGetAudit**](docs/AuditApi.md#getResourceGetAudit) | **GET** /database/job/result/audit/get | 
*BulkDeleteApi* | [**deleteBulkItems**](docs/BulkDeleteApi.md#deleteBulkItems) | **POST** /database/bulk-delete | 
*BulkDeleteApi* | [**getResourceDeleteBulkItems**](docs/BulkDeleteApi.md#getResourceDeleteBulkItems) | **GET** /database/job/result/bulk-delete/get | 
*DataApi* | [**getData**](docs/DataApi.md#getData) | **POST** /database/data/get | 
*DataApi* | [**getResourceGetData**](docs/DataApi.md#getResourceGetData) | **GET** /database/job/result/data/get | 
*DatesApi* | [**getDates**](docs/DatesApi.md#getDates) | **POST** /database/dates/get | 
*DatesApi* | [**getResourceGetDates**](docs/DatesApi.md#getResourceGetDates) | **GET** /database/job/result/dates/get | 
*DatesApi* | [**replaceDates**](docs/DatesApi.md#replaceDates) | **POST** /database/dates/replace | 
*DatesApi* | [**updateDates**](docs/DatesApi.md#updateDates) | **POST** /database/dates/update | 
*JobStatusApi* | [**getDatabaseStatusById**](docs/JobStatusApi.md#getDatabaseStatusById) | **GET** /database/job/status/get | 
*SchemaApi* | [**addFields**](docs/SchemaApi.md#addFields) | **POST** /database/schema/add | 
*SchemaApi* | [**createDatabase**](docs/SchemaApi.md#createDatabase) | **POST** /database/schema/create | 
*SchemaApi* | [**getFields**](docs/SchemaApi.md#getFields) | **POST** /database/schema/get | 
*SchemaApi* | [**getResourceGetFields**](docs/SchemaApi.md#getResourceGetFields) | **GET** /database/job/result/schema/get | 
*StatsApi* | [**getResourceGetStats**](docs/StatsApi.md#getResourceGetStats) | **GET** /database/job/result/stats/get | 
*StatsApi* | [**getStats**](docs/StatsApi.md#getStats) | **POST** /database/stats/get | 
*SymbolsApi* | [**getResourceGetSymbols**](docs/SymbolsApi.md#getResourceGetSymbols) | **GET** /database/job/result/symbols/get | 
*SymbolsApi* | [**getSymbols**](docs/SymbolsApi.md#getSymbols) | **POST** /database/symbols/get | 
*SymbolsApi* | [**replaceSymbols**](docs/SymbolsApi.md#replaceSymbols) | **POST** /database/symbols/replace | 
*SymbolsApi* | [**updateSymbols**](docs/SymbolsApi.md#updateSymbols) | **POST** /database/symbols/update | 


## Documentation for Models

 - [AddDatesRoot](docs/AddDatesRoot.md)
 - [AddDatesRootData](docs/AddDatesRootData.md)
 - [AddFieldsRoot](docs/AddFieldsRoot.md)
 - [AddFieldsRootData](docs/AddFieldsRootData.md)
 - [AddSymbolsRoot](docs/AddSymbolsRoot.md)
 - [AddSymbolsRootData](docs/AddSymbolsRootData.md)
 - [BulkDeleteItemObject](docs/BulkDeleteItemObject.md)
 - [BulkDeleteRespItem](docs/BulkDeleteRespItem.md)
 - [BulkDeleteRespItemNested](docs/BulkDeleteRespItemNested.md)
 - [BulkDeleteRoot](docs/BulkDeleteRoot.md)
 - [BulkDeleteRootData](docs/BulkDeleteRootData.md)
 - [CreateDatabaseRoot](docs/CreateDatabaseRoot.md)
 - [CreateDatabaseRootData](docs/CreateDatabaseRootData.md)
 - [DataValue](docs/DataValue.md)
 - [DatabasePathRoot](docs/DatabasePathRoot.md)
 - [DatabasePathRootData](docs/DatabasePathRootData.md)
 - [DateAndContentObject](docs/DateAndContentObject.md)
 - [DateAndFieldsObject](docs/DateAndFieldsObject.md)
 - [ErrorObject](docs/ErrorObject.md)
 - [ErrorObjectWithSource](docs/ErrorObjectWithSource.md)
 - [ErrorObjectWithSourceSource](docs/ErrorObjectWithSourceSource.md)
 - [FieldObject](docs/FieldObject.md)
 - [InlineResponse200](docs/InlineResponse200.md)
 - [InlineResponse2001](docs/InlineResponse2001.md)
 - [InlineResponse2001Data](docs/InlineResponse2001Data.md)
 - [InlineResponse2002](docs/InlineResponse2002.md)
 - [InlineResponse2003](docs/InlineResponse2003.md)
 - [InlineResponse2004](docs/InlineResponse2004.md)
 - [InlineResponse2005](docs/InlineResponse2005.md)
 - [InlineResponse2006](docs/InlineResponse2006.md)
 - [InlineResponse200Data](docs/InlineResponse200Data.md)
 - [InlineResponse201](docs/InlineResponse201.md)
 - [InlineResponse201Data](docs/InlineResponse201Data.md)
 - [InlineResponse400](docs/InlineResponse400.md)
 - [InlineResponse403](docs/InlineResponse403.md)
 - [SymbolAndContentObject](docs/SymbolAndContentObject.md)
 - [SymbolAndFieldsObject](docs/SymbolAndFieldsObject.md)
 - [UpdateDatesRoot](docs/UpdateDatesRoot.md)
 - [UpdateSymbolsRoot](docs/UpdateSymbolsRoot.md)


## Documentation for Authorization

Authentication schemes defined for the API:
### FactSetApiKey


- **Type**: HTTP basic authentication

### FactSetOAuth2


- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Recommendation

It's recommended to create an instance of `ApiClient` per thread in a multi-threaded environment to avoid any potential issues.

# Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

# Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
